updated README and added live version link and screenshot

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
     </div>
 
+    <!-- Get the jQuery library-->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- Get the Moment.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
 </html>
