setup moment.js and added 9 AM to 5 PM time blocks

--- a/index.html
+++ b/index.html
@@ -29,6 +29,96 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+      <!--9 AM Time Block-->
+      <div class="row">
+        <div class="col-2 md-auto bg-secondary">
+        <h4 class="bg-white text-dark">
+          9 AM
+        </h4>
+        </div>
+        <div class="col-8 bg-secondary"></div>
+        <div class="col-2 bg-info"></div>
+      </div>
+      <!--10 AM Time Block-->
+      <div class="row">
+        <div class="col-2 md-auto bg-secondary">
+        <h4 class="bg-white text-dark">
+          10 AM
+        </h4>
+        </div>
+        <div class="col-8 bg-secondary"></div>
+        <div class="col-2 bg-info"></div>
+      </div>
+      <!--11 AM Time Block-->
+      <div class="row">
+        <div class="col-2 md-auto bg-secondary">
+        <h4 class="bg-white text-dark">
+          11 AM
+        </h4>
+        </div>
+        <div class="col-8 bg-secondary"></div>
+        <div class="col-2 bg-info"></div>
+      </div>
+      <!--12 PM Time Block-->
+      <div class="row">
+        <div class="col-2 md-auto bg-secondary">
+        <h4 class="bg-white text-dark">
+          12 PM
+        </h4>
+        </div>
+        <div class="col-8 bg-secondary"></div>
+        <div class="col-2 bg-info"></div>
+      </div>
+      <!--1 PM Time Block-->
+      <div class="row">
+        <div class="col-2 md-auto bg-secondary">
+        <h4 class="bg-white text-dark">
+          1 PM
+        </h4>
+        </div>
+        <div class="col-8 bg-secondary"></div>
+        <div class="col-2 bg-info"></div>
+      </div>
+      <!--2 PM Time Block-->
+      <div class="row">
+        <div class="col-2 md-auto bg-secondary">
+        <h4 class="bg-white text-dark">
+          2 PM
+        </h4>
+        </div>
+        <div class="col-8 bg-secondary"></div>
+        <div class="col-2 bg-info"></div>
+      </div>
+      <!--3 PM Time Block-->
+      <div class="row">
+        <div class="col-2 md-auto bg-secondary">
+        <h4 class="bg-white text-dark">
+          3 PM
+        </h4>
+        </div>
+        <div class="col-8 bg-secondary"></div>
+        <div class="col-2 bg-info"></div>
+      </div>
+      <!--4 PM Time Block-->
+      <div class="row">
+        <div class="col-2 md-auto bg-secondary">
+        <h4 class="bg-white text-dark">
+          4 PM
+        </h4>
+        </div>
+        <div class="col-8 bg-secondary"></div>
+        <div class="col-2 bg-info"></div>
+      </div>
+      <!--5 PM Time Block-->
+      <div class="row">
+        <div class="col-2 md-auto bg-secondary">
+        <h4 class="bg-white text-dark">
+          5 PM
+        </h4>
+        </div>
+        <div class="col-8 bg-secondary"></div>
+        <div class="col-2 bg-info"></div>
+      </div>
       <!-- Timeblocks go here -->
     <!--Starts at 9 AM to 5 PM-->
     <!--Gray hour blocks are "Previous", use "Past" css selector for styling, Bootstrap for classes for other stuff-->
