added comments for next steps to work on

--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
     </header>
     <div class="container">
       <!--9 AM Time Block-->
-      <div class="row">
+      <div class="row h-100">
+        <!--Trying to adjust height of row to match demonstration-->
         <div class="col-2 md-auto bg-secondary">
         <h4 class="bg-white text-dark">
           9 AM
         </h4>
         </div>
         <div class="col-8 bg-secondary"></div>
+        
+        <!-- bg-info classes will have a "save" icon centered inside-->
         <div class="col-2 bg-info"></div>
       </div>
       <!--10 AM Time Block-->
